syntax = "proto3";

package pb;

import "user.proto";

option go_package = "github.com/andreanpradanaa/simple-bank-app/pb";

message UpdateUserRequest {
    string username = 1;        
    optional string full_name = 2;      
	optional string email = 3;  
    optional string hashed_password = 4;
}

message UpdateUserResponse {
    User user = 1;
}
