syntax = "proto3";

import "google/protobuf/timestamp.proto";

package pb;

option go_package = "github.com/andreanpradanaa/simple-bank-app/pb";

message User {
    string username = 1;         
    string full_name = 2;         
	string email = 3;             
	google.protobuf.Timestamp password_changed_at = 4;
	google.protobuf.Timestamp created_at = 5;
}
